# micro-jrpg

./: .gitignore  CMakeLists.txt  README.md
assets/8x8ascii-darkrose/: README.md
cmake/: Findraylib.cmake
src/: CMakeLists.txt  game.c  game.h  gametime.c  gametime.h  input.c  input.h  main.c  microrpg.h
src/cutscene/: CMakeLists.txt  cutscene.c  cutscene.h  cutsceneitem.c  cutsceneitem.h  cutscenemode.c  cutscenemode.h  cutscenetext.h  cutscenewait.h  testcutscene.h
src/cutscene/item/: CMakeLists.txt  cutscenecallback.h  cutscenecutscene.h  cutsceneitem.c  cutsceneitem.h  cutscenetext.h
src/cutscene/scene/: testcutscene.h
src/entity/: CMakeLists.txt  direction.c  direction.h  entity.c  entity.h  entitytype.h  player.c  player.h  sign.c  sign.h
src/platform/: CMakeLists.txt  platform.h
src/platform/raylib/: CMakeLists.txt  font.c  font.h  inputraylib.c  platform.c  platformraylib.h  termraylib.c
src/platform/term/: CMakeLists.txt  term.c  term.h  termcolor.h  termoverworld.c  termoverworld.h
src/platform/tty/: CMakeLists.txt  inputterm.c  platform.c  platformtty.h  termtty.c
src/scene/: CMakeLists.txt  scene.c  scene.h
src/term/: CMakeLists.txt  inputterm.c  term.c  term.h
src/world/: CMakeLists.txt  chunk.h  map.c  map.h  tile.h
tools/: CMakeLists.txt
tools/embed/: CMakeLists.txt  embed.cmake
